syntax = "proto3";

package ad;
option go_package = "lesson9/homework/internal/ports/grpc";

service AdService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
  rpc FindUser(FindUserRequest) returns (UserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {}
  rpc ListAds(ListAdsRequest) returns (ListAdResponse) {}
  rpc CreateAd(CreateAdRequest) returns (AdResponse) {}
  rpc GetAd(GetAdRequest) returns (AdResponse) {}
  rpc UpdateAd(UpdateAdRequest) returns (AdResponse) {}
  rpc ChangeAdStatus(ChangeAdStatusRequest) returns (AdResponse) {}
  rpc FindAd(FindAdRequest) returns (AdResponse) {}
  rpc DeleteAd(DeleteAdRequest) returns (AdResponse) {}
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message FindUserRequest {
  string query = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message AdResponse {
  int64 id = 1;
  string title = 2;
  string text = 3;
  int64 author_id = 4;
  bool published = 5;
}

message ListAdResponse {
  repeated AdResponse list = 1;
}

message ListAdsRequest {
  int64 bitmask = 1;
}

message CreateAdRequest {
  string title = 1;
  string text = 2;
  int64 user_id = 3;
}

message GetAdRequest {
  int64 id = 1;
}

message UpdateAdRequest {
  int64 ad_id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
}

message ChangeAdStatusRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
  bool published = 3;
}

message FindAdRequest {
  string query = 1;
}

message DeleteAdRequest {
  int64 ad_id = 1;
  int64 author_id = 2;
}
